Basic index page + wip express routing
1) Added basic index page, that will house the video player.
2) Configuring the express app to send the viewer to the index page.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A HTML5 video player, using Javascript for interaction",
   "main": "app.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
