--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "material-design-icons": "^3.0.1"
+    "material-icons": "^0.2.3"
   },
   "nodemonConfig": {
     "ignore": [
